--- a/Lectures/000_IntroCourse.html
+++ b/Lectures/000_IntroCourse.html
@@ -57,7 +57,18 @@
       3. Unix and Perl to the rescue! Bradnam and
       Korf. (website)[http://rescuedbycode.com/].
       4. Rosalind. An online platform to learn bioinformatics and
-      programming (Python focused). (Rosalind website)[http://rosalind.info/problems/locations/
+      programming (Python focused). (Rosalind website)[http://rosalind.info/problems/locations/]
+
+
+      ---
+      # Grading
+
+
+      ---
+      # Homework
+
+      ---
+      #
 
     </textarea>
     <script src="js/remark.js" type="text/javascript">
