--- a/Lectures/010_IntroToUnix.html
+++ b/Lectures/010_IntroToUnix.html
@@ -79,6 +79,12 @@
       1. pico
       2. emacs, vi, nano
       3. TextEdit on OSX
+
+      ---
+      # Other resources
+      1. [Introduction to UNIX Shell - Software Carpentry](http://swcarpentry.github.io/shell-novice/)
+      2. [UNIX bootcamp - Rescued by Code](http://rescuedbycode.com/linux-bootcamp)
+      3. 
       
     </textarea>
     <script src="js/remark.js" type="text/javascript">
