rough outline of homework

--- a/Assignments/Homework_1.html
+++ b/Assignments/Homework_1.html
@@ -11,18 +11,45 @@
   <![endif]-->
 </head>
 <body>
+<p>===Homework 1===</p>
+<p>Write a bash / shell script to accomplish the following tasks. You can just break the tasks into separate sections in your code, use comments to indicate which parts answer which of the questions. You can use the echo command to print out a message with the result if needed.</p>
 <ol type="1">
+<li>Getting data
+<ul>
+<li>Use wget or curl to download the text file <a href="http://www.gutenberg.org/cache/epub/24923/pg24923.txt"><em>The Variation of Animals and Plants Under Domestication, Vol. I.</em></a></li>
+<li>How big is this file (in kilobytes)?</li>
+</ul></li>
+<li>Compressing and uncompressing</li>
+</ol>
+<ul>
+<li>Compress the File</li>
+</ul>
+<ol start="2" type="1">
 <li>Counting</li>
 </ol>
 <ul>
-<li><p>How many total words are in file presenting Darwin's <em>The Variation of Animals and Plants Under Domestication, Vol. I.</em> (http://www.gutenberg.org/cache/epub/24923/pg24923.txt)[<em>The Variation of Animals and Plants Under Domestication, Vol. I.</em>]</p></li>
-<li><p>How many rows are in the file [/data/</p></li>
+<li>How many total words are in the file presenting Darwin's <a href="http://www.gutenberg.org/cache/epub/24923/pg24923.txt"><em>The Variation of Animals and Plants Under Domestication, Vol. I.</em></a>
+<ul>
+<li>How many rows are in this <a href="/data/Nc_EXP1.tab">data file</a></li>
+</ul></li>
+</ul>
+<ol start="3" type="1">
+<li>Sorting</li>
+</ol>
+<ul>
+<li>Sort the <a href="/data/Nc_EXP1.tab">data file</a> so that the most highly expressed genes for condition 1</li>
 </ul>
 <ol type="1">
-<li><p>Sorting</p></li>
-<li><p>Finding</p></li>
-<li><p>Finding and Counting</p></li>
-<li><p>Columns</p></li>
+<li>Finding and Counting</li>
 </ol>
+<ul>
+<li>Count the number of mRNA features in this [genbank file](/data/yeast.gbk.gz] (note this file is compressed)</li>
+</ul>
+<ol type="1">
+<li>Columns</li>
+</ol>
+<ul>
+<li>Take these files <a href="/data/">WT1</a> <a href="/data/">WT2</a> and combine columns 1,2 from WT1 and add column 2 from WT2 to make a new file that has 3 columns.</li>
+</ul>
 </body>
 </html>
