--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
       <li> <a href="Assignments/Homework_4.html">Homework 4</a></li>
       <li> <a href="Assignments/Homework_5.html">Homework 5</a></li>
     </ul>
-	
+    Access and clone the <a href="http://github.com/hyphaltip/GEN220_2015">git repository</a>.	
   </body>
 </html>
 
