--- a/Assignments/Homework_1.html
+++ b/Assignments/Homework_1.html
@@ -11,7 +11,7 @@
   <![endif]-->
 </head>
 <body>
-<p>===Homework 1===</p>
+<p>Homework 1</p>
 <p>Write a bash / shell script to accomplish the following tasks. You can just break the tasks into separate sections in your code, use comments to indicate which parts answer which of the questions. You can use the echo command to print out a message with the result if needed.</p>
 <ol type="1">
 <li>Getting data
@@ -19,37 +19,30 @@
 <li>Use wget or curl to download the text file <a href="http://www.gutenberg.org/cache/epub/24923/pg24923.txt"><em>The Variation of Animals and Plants Under Domestication, Vol. I.</em></a></li>
 <li>How big is this file (in kilobytes)?</li>
 </ul></li>
-<li>Compressing and uncompressing</li>
-</ol>
+<li>Compressing and uncompressing
 <ul>
-<li>Compress the File</li>
-</ul>
-<ol start="2" type="1">
-<li>Counting</li>
-</ol>
-<ul>
-<li>How many total words are in the file presenting Darwin's <a href="http://www.gutenberg.org/cache/epub/24923/pg24923.txt"><em>The Variation of Animals and Plants Under Domestication, Vol. I.</em></a>
-<ul>
-<li>How many rows are in this <a href="/data/Nc_EXP1.tab">data file</a></li>
+<li>Compress the File pg24923.txt you downloaded with gzip, how big is it in kilobytes?</li>
+<li>Uncompress it, then compress it with bzip2, how big is it in kilobytes?</li>
+<li>Uncompress it again</li>
 </ul></li>
-</ul>
-<ol start="3" type="1">
-<li>Sorting</li>
-</ol>
+<li>Counting
 <ul>
-<li>Sort the <a href="/data/Nc_EXP1.tab">data file</a> so that the most highly expressed genes for condition 1</li>
-</ul>
-<ol type="1">
-<li>Finding and Counting</li>
-</ol>
+<li>How many total words are in the file presenting Darwin's <a href="http://www.gutenberg.org/cache/epub/24923/pg24923.txt"><em>The Variation of Animals and Plants Under Domestication, Vol. I.</em></a></li>
+<li>How many rows are in this <a href="/data/Nc20H.expr.tab">data file</a></li>
+</ul></li>
+<li>Sorting
 <ul>
-<li>Count the number of mRNA features in this [genbank file](/data/yeast.gbk.gz] (note this file is compressed)</li>
-</ul>
-<ol type="1">
-<li>Columns</li>
-</ol>
+<li>Sort the <a href="/data/Nc20H.expr.tab">data file</a> based on the FPKM column (gene expression) (write out to a new file called Nc20H.expr.sorted.tab)</li>
+<li>How many exon features are there in the <a href="/data/rice_chr6.gff.gz">rice chromosome 6 gff file</a> (this file is compressed). You can do this in several different ways.</li>
+</ul></li>
+<li>Finding and Counting
 <ul>
-<li>Take these files <a href="/data/">WT1</a> <a href="/data/">WT2</a> and combine columns 1,2 from WT1 and add column 2 from WT2 to make a new file that has 3 columns.</li>
-</ul>
+<li>Count the number of gene features in this [genbank file](/data/D_mel.63B12.gbk] - see for example <a href="http://www.ncbi.nlm.nih.gov/Sitemap/samplerecord.html">this explanation</a> of a genbank file if you are not familiar.</li>
+</ul></li>
+<li>Column combining
+<ul>
+<li>Take these files <a href="/data/Nc20H.expr.tab">Nc20H</a> <a href="/data/Nc3H.expr.tab">Nc3H</a> and combine columns 1-6 (gene_id,bundle_id,chr,left,right,FPKM) from Nc20H and column 6 from Nc3H to make a new file with 7 columns the last 2 are gene expression values for the two experiments. You should use the cut and paste UNIX commands to accomplist this, though use of other tools is permitted. You may want to validate the gene counts in both files, using sort and uniq</li>
+</ul></li>
+</ol>
 </body>
 </html>
