update html generated

--- a/Assignments/Homework_1.html
+++ b/Assignments/Homework_1.html
@@ -28,20 +28,20 @@
 <li>Counting
 <ul>
 <li>How many total words are in the file presenting Darwin's <a href="http://www.gutenberg.org/cache/epub/24923/pg24923.txt"><em>The Variation of Animals and Plants Under Domestication, Vol. I.</em></a></li>
-<li>How many rows are in this <a href="/data/Nc20H.expr.tab">data file</a></li>
+<li>How many rows are in this <a href="/GEN220_2015/data/Nc20H.expr.tab">data file</a></li>
 </ul></li>
 <li>Sorting
 <ul>
-<li>Sort the <a href="/data/Nc20H.expr.tab">data file</a> based on the FPKM column (gene expression) (write out to a new file called Nc20H.expr.sorted.tab)</li>
-<li>How many exon features are there in the <a href="/data/rice_chr6.gff.gz">rice chromosome 6 gff file</a> (this file is compressed). You can do this in several different ways.</li>
+<li>Sort the <a href="/GEN220_2015/data/Nc20H.expr.tab">data file</a> based on the FPKM column (gene expression) (write out to a new file called Nc20H.expr.sorted.tab)</li>
+<li>How many exon features are there in the <a href="/GEN220_2015/data/rice_chr6.gff.gz">rice chromosome 6 gff file</a> (this file is compressed). You can do this in several different ways.</li>
 </ul></li>
 <li>Finding and Counting
 <ul>
-<li>Count the number of gene features in this [genbank file](/data/D_mel.63B12.gbk] - see for example <a href="http://www.ncbi.nlm.nih.gov/Sitemap/samplerecord.html">this explanation</a> of a genbank file if you are not familiar.</li>
+<li>Count the number of gene features in this <a href="/GEN220_2015/data/D_mel.63B12.gbk">genbank file</a> - see for example <a href="http://www.ncbi.nlm.nih.gov/Sitemap/samplerecord.html">this explanation</a> of a genbank file if you are not familiar.</li>
 </ul></li>
 <li>Column combining
 <ul>
-<li>Take these files <a href="/data/Nc20H.expr.tab">Nc20H</a> <a href="/data/Nc3H.expr.tab">Nc3H</a> and combine columns 1-6 (gene_id,bundle_id,chr,left,right,FPKM) from Nc20H and column 6 from Nc3H to make a new file with 7 columns the last 2 are gene expression values for the two experiments. You should use the cut and paste UNIX commands to accomplist this, though use of other tools is permitted. You may want to validate the gene counts in both files, using sort and uniq</li>
+<li>Take these files <a href="/GEN220_2015/data/Nc20H.expr.tab">Nc20H</a> <a href="/GEN220_2015/data/Nc3H.expr.tab">Nc3H</a> and combine columns 1-6 (gene_id,bundle_id,chr,left,right,FPKM) from Nc20H and column 6 from Nc3H to make a new file with 7 columns the last 2 are gene expression values for the two experiments. You should use the cut and paste UNIX commands to accomplist this, though use of other tools is permitted. You may want to validate the gene counts in both files, using sort and uniq</li>
 </ul></li>
 </ol>
 </body>
