update for lecture 1

--- a/Lectures/010_IntroToUnix.html
+++ b/Lectures/010_IntroToUnix.html
@@ -25,8 +25,9 @@
     <textarea id="source">
       class: center, middle
 
-      # Introduction to UNIX
+      # Introduction to UNIX (I)
 
+      Command line and Directories and Files
       
       ---
 
