--- a/index.html
+++ b/index.html
@@ -27,7 +27,8 @@
     <h2>Lectures</h2>
     <ul> 
       <li> <a href="Lectures/000_IntroCourse.html">Introduction to the course</a></li>
-      <li> <a href="Lectures/010_IntroToUnix.html">Beginning Intro to UNIX</a></li>
+      <li> <a href="Lectures/010_IntroToUnix.html">Intro to UNIX
+	  (I)</a></li>
     </ul>
     <h2>Homework assignments</h2>
     <ul>
