--- a/index.html
+++ b/index.html
@@ -29,16 +29,27 @@
       <li> <a href="Lectures/000_IntroCourse.html">Introduction to the course</a></li>
       <li> <a href="Lectures/010_IntroToUnix.html">Intro to UNIX
 	  (I)</a></li>
-    </ul>
+      <li> <a href="Lectures/020_UNIX_IO.html">Intro to UNIX
+	  (II) - Files and Applications</a></li>
+            <li> <a href="Lectures/030_UNIX_SortGrep.html">Intro to UNIX
+	  (II) - Processing Data</a></li>
+
+</ul>
     <h2>Homework assignments</h2>
     <ul>
       <li> <a href="Assignments/Homework_1.html">Homework 1</a></li>
       <li> <a href="Assignments/Homework_2.html">Homework 2</a></li>
-      <li> <a href="Assignments/Homework_3.html">Homework 3</a></li>
+<!--      <li> <a href="Assignments/Homework_3.html">Homework 3</a></li>
       <li> <a href="Assignments/Homework_4.html">Homework 4</a></li>
       <li> <a href="Assignments/Homework_5.html">Homework 5</a></li>
+-->
     </ul>
-    Access and clone the <a href="http://github.com/hyphaltip/GEN220_2015">git repository</a>.	
+    Access repository or clone it at <a href="http://github.com/hyphaltip/GEN220_2015">github</a>.	
+
+    <h2>Resources</h2>
+    <li> <a href="Resources/access_to_UNIX.html">Info on access to
+    UNIX on various computers</a> and as a <a href="Resources/access_to_UNIX.pdf">PDF</a>
+
   </body>
 </html>
 
