--- a/Assignments/Homework_1.html
+++ b/Assignments/Homework_1.html
@@ -11,7 +11,7 @@
   <![endif]-->
 </head>
 <body>
-<p>Homework 1</p>
+<h1 id="homework-1">Homework 1</h1>
 <p>Write a bash / shell script to accomplish the following tasks. You can just break the tasks into separate sections in your code, use comments to indicate which parts answer which of the questions. You can use the echo command to print out a message with the result if needed.</p>
 <ol type="1">
 <li>Getting data
