add Jordan's slides

--- a/index.html
+++ b/index.html
@@ -34,7 +34,9 @@
 	  (II) - Files and Applications</a></li>
 
       <li> <a href="Lectures/030_UNIX_SortGrep.html">Intro to UNIX
-	  (II) - Processing Data</a></li> 
+	  (II) - Processing Data</a></li>
+      <li> <a href="https://docs.google.com/presentation/d/1vnWtenQuRbeaGUMyL39UIwQGZlY3KHMs8MSrssD_M1I/edit">Linux
+	  and UCR's Biocluster</a>
 
 </ul>
     <h2>Homework assignments</h2>
