--- a/Lectures/Template.html
+++ b/Lectures/Template.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>Introduction to UNIX</title>
+    <title>TEMPLATE TITLE HERE</title>
         <meta http-equiv="Content-Type" content="text/html;
 						 charset=UTF-8"/>
 	<style type="text/css">
