--- a/index.html
+++ b/index.html
@@ -37,7 +37,8 @@
 	  (II) - Processing Data</a></li>
       <li> <a href="https://docs.google.com/presentation/d/1vnWtenQuRbeaGUMyL39UIwQGZlY3KHMs8MSrssD_M1I/edit">Linux
 	  and UCR's Biocluster</a>
-
+      <li> <a href="Lectures/040_BedTools.html">BEDTools for range and
+	  feature queries</a></li>
 </ul>
     <h2>Homework assignments</h2>
     <ul>
