--- a/Lectures/040_BedTools.html
+++ b/Lectures/040_BedTools.html
@@ -163,7 +163,7 @@
       Version: v2.24.0
       Summary: Extract DNA sequences into a fasta file based on
       feature coordinates.
-      Usage:   bedtools getfasta [OPTIONS] -fi &lt;fasta&gt; -bed &lst;bed/gff/vcf&gt; -fo &lt;fasta&gt;
+      Usage:   bedtools getfasta [OPTIONS] -fi &lt;fasta&gt; -bed &lt;bed/gff/vcf&gt; -fo &lt;fasta&gt;
       
       Options:
       -fi	Input FASTA file
