--- a/Assignments/Homework_2.html
+++ b/Assignments/Homework_2.html
@@ -16,7 +16,7 @@
 <p>Recently the 3000 Rice genome project released data on resequencing 3000 rice genomes. See the <a href="http://blog.dnanexus.com/tag/3000-rice-genomes-project/">site here</a> and <a href="http://www.oryzasnp.org/">OryzaSNP</a>.</p>
 <p>You can access this file in the SNPs link below</p>
 <p>I downloaded the Rice GFF annotation from <a href="http://gramene.org">Gramene</a> from this <a href="ftp://ftp.gramene.org/pub/gramene/release47/data/gff3/oryza_sativa/Oryza_sativa.IRGSP-1.0.27.chromosome.6.gff3.gz">FTP location</a></p>
-<p>Use the following files <a href="/GEN220_2015/data/rice_chr6_3kSNPs_filt.bed.gz">SNPs</a> and <a href="/GEN220_2015/data/Oryza_sativa.IRGSP-1.0.27.chromosome.6.gff3.gz">annotation</a></p>
+<p>Use the following files <a href="http://hyphaltip.github.io/GEN220_2015/data/rice_chr6_3kSNPs_filt.bed.gz">SNPs</a> and <a href="http://hyphaltip.github.io/GEN220_2015/data/Oryza_sativa.IRGSP-1.0.27.chromosome.6.gff3.gz">annotation</a></p>
 <ol type="1">
 <li>How many <strong>genes</strong> have SNPs that overlap them?</li>
 <li>How many <strong>SNPs</strong> are in the coding regions of genes (denoted by the CDS feature)?</li>
