--- a/index.html
+++ b/index.html
@@ -42,9 +42,13 @@
 </ul>
     <h2>Homework assignments</h2>
     <ul>
-      <li> <a href="Assignments/Homework_1.html">Homework 1</a></li>
-      <li> <a href="Assignments/Homework_2.html">Homework 2</a></li>
-<!--      <li> <a href="Assignments/Homework_3.html">Homework 3</a></li>
+      <li> <a href="Assignments/Homework_1.html">Homework 1</a> or as
+      <a href="Assignments/Homework_1.pdf">PDF</a></li>
+      <li> <a href="Assignments/Homework_2.html">Homework 2</a> or as
+      <a href="Assignments/Homework_2.pdf">PDF</a></li>
+      <li> <a href="Assignments/Homework_3.html">Homework 3</a> or as
+	<a href="Assignments/Homework_3.pdf">PDF</a></li>
+<!--
       <li> <a href="Assignments/Homework_4.html">Homework 4</a></li>
       <li> <a href="Assignments/Homework_5.html">Homework 5</a></li>
 -->
