--- a/index.html
+++ b/index.html
@@ -39,6 +39,10 @@
 	  and UCR's Biocluster</a>
       <li> <a href="Lectures/040_BedTools.html">BEDTools for range and
 	  feature queries</a></li>
+      <li> <a href="Lectures/050_Python_Intro.html">Introduction to
+	  Python: Numbers, Strings, Lists, if and for statements
+	  </a></li>
+      
 </ul>
     <h2>Homework assignments</h2>
     <ul>
