--- a/index.html
+++ b/index.html
@@ -42,7 +42,8 @@
       <li> <a href="Lectures/050_Python_Intro.html">Introduction to
 	  Python: Numbers, Strings, Lists, if and for statements
 	  </a></li>
-      
+	 <li> <a href="Lectures/060_Python_Loops_More.html"> More Python
+</a></li>
 </ul>
     <h2>Homework assignments</h2>
     <ul>
@@ -52,10 +53,8 @@
       <a href="Assignments/Homework_2.pdf">PDF</a></li>
       <li> <a href="Assignments/Homework_3.html">Homework 3</a> or as
 	<a href="Assignments/Homework_3.pdf">PDF</a></li>
-<!--
       <li> <a href="Assignments/Homework_4.html">Homework 4</a></li>
       <li> <a href="Assignments/Homework_5.html">Homework 5</a></li>
--->
     </ul>
     Access repository or clone it at <a href="http://github.com/hyphaltip/GEN220_2015">github</a>.	
 
