--- a/index.html
+++ b/index.html
@@ -42,7 +42,8 @@
       <li> <a href="Lectures/050_Python_Intro.html">Introduction to
 	  Python: Numbers, Strings, Lists, if and for statements
 	  </a></li>
-	 <li> <a href="Lectures/060_Python_Loops_More.html"> More Python
+	 <li> <a href="Lectures/060_Python_Loops_More.html"> Python:
+	 Loops and regular expressions
 </a></li>
 </ul>
     <h2>Homework assignments</h2>
