link to Jinfeng lecture

--- a/index.html
+++ b/index.html
@@ -44,6 +44,7 @@
 	  </a></li>
 	 <li> <a href="Lectures/060_Python_Loops_More.html"> Python:
 	 Loops and regular expressions
+      <li><a href="https://jinfengchen.github.io/Workshop/Python/Python_IO.html">Python I/O: reading and writing data</a></li>
 </a></li>
 </ul>
     <h2>Homework assignments</h2>
