--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
       <a href="Assignments/Homework_2.pdf">PDF</a></li>
       <li> <a href="Assignments/Homework_3.html">Homework 3</a> or as
 	<a href="Assignments/Homework_3.pdf">PDF</a></li>
-      <li> <a href="Assignments/Homework_4.html">Homework 4</a></li> or as
+      <li> <a href="Assignments/Homework_4.html">Homework 4</a> or as
 	<a href="Assignments/Homework_4.pdf">PDF</a></li>
       <li> <a href="Assignments/Homework_5.html">Homework 5</a></li>
     </ul>
