--- a/index.html
+++ b/index.html
@@ -54,7 +54,9 @@
       <li> <a href="Assignments/Homework_2.html">Homework 2</a> or as
       <a href="Assignments/Homework_2.pdf">PDF</a></li>
       <li> <a href="Assignments/Homework_3.html">Homework 3</a> or as
-	<a href="Assignments/Homework_3.pdf">PDF</a></li>
+	<a href="Assignments/Homework_3.pdf">PDF</a> - Solutions:
+	[<a href="Examples/HW3_problem1_solution.py">Part 1</a>]
+	[<a href="Examples/HW3_SNPCount_solution.py">Part 2</a> and <a href="Examples/HW3_SNPCount_solution_sorted.py">with Sorting</a>]</li>
       <li> <a href="Assignments/Homework_4.html">Homework 4</a> or as
 	<a href="Assignments/Homework_4.pdf">PDF</a></li>
       <li> <a href="Assignments/Homework_5.html">Homework 5</a></li>
