link to other data sets

--- a/index.html
+++ b/index.html
@@ -66,7 +66,11 @@
     <h2>Resources</h2>
     <li> <a href="Resources/access_to_UNIX.html">Info on access to
     UNIX on various computers</a> and as a <a href="Resources/access_to_UNIX.pdf">PDF</a>
-
+      <li> Examples code from class will end up <a href="https://github.com/hyphaltip/GEN220_2015/tree/master/Examples">in this folder</a></li>
+      <li> Data files for the class will end
+      up <a href="https://github.com/hyphaltip/GEN220_2015/blob/master/data/">in
+      this folder</a></li>
   </body>
+  
 </html>
 
