--- a/index.html
+++ b/index.html
@@ -45,7 +45,8 @@
 	 <li> <a href="Lectures/060_Python_Loops_More.html"> Python:
 	 Loops and regular expressions
       <li><a href="https://jinfengchen.github.io/Workshop/Python/Python_IO.html">Python I/O: reading and writing data</a></li>
-	<li>Lectures/080_Python_Datastructures.html"> Data structures</a></li>
+
+	<li><a href="Lectures/080_Python_Datastructures.html"> Data structures</a></li>
 </ul>
     <h2>Homework assignments</h2>
     <ul>
