--- a/index.html
+++ b/index.html
@@ -62,6 +62,10 @@
 	<a href="Assignments/Homework_4.pdf">PDF</a></li>
       <li> <a href="Assignments/Homework_5.html">Homework 5</a></li>
     </ul>
+    <h2>Projects</h2>
+
+    <a href="Assignments/Project_outline.html">Project Outline (first draft)</a>
+
     Access repository or clone it at <a href="http://github.com/hyphaltip/GEN220_2015">github</a>.	
 
     <h2>Resources</h2>
