--- a/index.html
+++ b/index.html
@@ -47,6 +47,7 @@
       <li><a href="https://jinfengchen.github.io/Workshop/Python/Python_IO.html">Python I/O: reading and writing data</a></li>
 
 	<li><a href="Lectures/080_Python_Datastructures.html"> Data structures</a></li>
+	<li><a href="Lectures/090_Structured_Data.html">Structured Data</a></li>
 </ul>
     <h2>Homework assignments</h2>
     <ul>
