--- a/Assignments/Homework_5.html
+++ b/Assignments/Homework_5.html
@@ -11,6 +11,12 @@
   <![endif]-->
 </head>
 <body>
-
+<h1 id="homework-5">Homework 5</h1>
+<p>Due Nov 11</p>
+<ol type="1">
+<li><p>Write a script using the 'csv' package to parse a BLAST report and print out the number of hits found for each query sequence. Also add a step to filter hits which are of a minimum length of at least 50 bp match in the query.</p></li>
+<li><p>Write a script to parse <a href="https://www.vectorbase.org/download/ixodes-scapularis-wikeltranscriptsiscaw14fagz">the transcript sequences</a> from the Tick <em>Ixodes scapularis</em> genome and print out the max, minn, and average length of these transcripts.</p></li>
+<li><p>Write a script to</p></li>
+</ol>
 </body>
 </html>
