updated for HW5

--- a/index.html
+++ b/index.html
@@ -46,8 +46,10 @@
 	 Loops and regular expressions
       <li><a href="https://jinfengchen.github.io/Workshop/Python/Python_IO.html">Python I/O: reading and writing data</a></li>
 
-	<li><a href="Lectures/080_Python_Datastructures.html"> Data structures</a></li>
-	<li><a href="Lectures/090_Structured_Data.html">Structured Data</a></li>
+	<li><a href="Lectures/080_Python_Datastructures.html">Python: Data structures</a></li>
+	<li><a href="Lectures/090_Structured_Data.html">Python:
+	    Parsing Structured Data using modules</a></li>
+	<li><a href=""></a>Bioinformatics: BLAST Searches, Sequence Analyses</li>
 </ul>
     <h2>Homework assignments</h2>
     <ul>
@@ -61,7 +63,8 @@
 	[<a href="Examples/HW3_SNPCount_solution.py">Part 2</a> and <a href="Examples/HW3_SNPCount_solution_sorted.py">with Sorting</a>]</li>
       <li> <a href="Assignments/Homework_4.html">Homework 4</a> or as
 	<a href="Assignments/Homework_4.pdf">PDF</a></li>
-      <li> <a href="Assignments/Homework_5.html">Homework 5</a></li>
+      <li> <a href="Assignments/Homework_5.html">Homework 5</a>
+      or as <a href="Assignments/Homework_5.pdf">PDF</a></li>
     </ul>
     <h2>Projects</h2>
 
