add project signup

--- a/index.html
+++ b/index.html
@@ -68,7 +68,10 @@
     </ul>
     <h2>Projects</h2>
 
-    <a href="Assignments/Project_outline.html">Project Outline (first draft)</a>
+    <a href="Assignments/Project_outline.html">Project Outline (first
+      draft)</a>
+    <a href="https://docs.google.com/document/d/1eh1KSYl1c0vhCARWKzHY5I2kZlPY6GY4xUDdB-8wFpA/edit?usp=sharing">Sign
+    up for a Team Project</a>
 
     Access repository or clone it at <a href="http://github.com/hyphaltip/GEN220_2015">github</a>.	
 
