Lecture X up -not quite finished

--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
 	<li><a href="Lectures/080_Python_Datastructures.html">Python: Data structures</a></li>
 	<li><a href="Lectures/090_Structured_Data.html">Python:
 	    Parsing Structured Data using modules</a></li>
-	<li><a href=""></a>Bioinformatics: BLAST Searches, Sequence Analyses</li>
+	<li><a href="Lectures/100_BioInfx_BLAST.html">Bioinformatics: BLAST Searches, Sequence Analyses</a></li>
 </ul>
     <h2>Homework assignments</h2>
     <ul>
