--- a/index.html
+++ b/index.html
@@ -68,11 +68,13 @@
     </ul>
     <h2>Projects</h2>
 
-    <a href="Assignments/Project_outline.html">Project Outline (first
-      draft)</a>
-    <a href="https://docs.google.com/document/d/1eh1KSYl1c0vhCARWKzHY5I2kZlPY6GY4xUDdB-8wFpA/edit?usp=sharing">Sign
-    up for a Team Project</a>
+    <li> <a href="https://docs.google.com/document/d/1eh1KSYl1c0vhCARWKzHY5I2kZlPY6GY4xUDdB-8wFpA/edit?usp=sharing">Sign 
+      up for a Team Project</a></li>
 
+    <li><a href="Assignments/Project_outline.html">Project Outline (first
+      draft)</a> - ignore this until updated with final description
+      of projects - see the Signup sheet above for brainstormed ideas</li>
+        
     Access repository or clone it at <a href="http://github.com/hyphaltip/GEN220_2015">github</a>.	
 
     <h2>Resources</h2>
