--- a/index.html
+++ b/index.html
@@ -50,6 +50,7 @@
 	<li><a href="Lectures/090_Structured_Data.html">Python:
 	    Parsing Structured Data using modules</a></li>
 	<li><a href="Lectures/100_BioInfx_BLAST.html">Bioinformatics: BLAST Searches, Sequence Analyses</a></li>
+        <li><a href="Lectures/120_RNASeq.html">RNAseq</a></li>
 </ul>
     <h2>Homework assignments</h2>
     <ul>
