--- a/index.html
+++ b/index.html
@@ -51,7 +51,8 @@
 	    Parsing Structured Data using modules</a></li>
 	<li><a href="Lectures/100_BioInfx_BLAST.html">Bioinformatics: BLAST Searches, Sequence Analyses</a></li>
 	<li><a href="https://jinfengchen.github.io/Workshop/NGS_basic/SNP.html#1">Fastq, Alignment, SNP Calling</a></li>
-        <li><a href="Lectures/120_RNASeq.html">RNAseq</a></li>
+             <li><a href="Lectures/120_RNASeq.html">RNAseq</a></li>
+	     <li><a href="Lectures/130_SNPpipeline.html">SNPs and Pipelines</a></li>
 </ul>
     <h2>Homework assignments</h2>
     <ul>
