--- a/Lectures/000_IntroCourse.html
+++ b/Lectures/000_IntroCourse.html
@@ -33,7 +33,7 @@
       ---
       # GEN 220
 
-      * This course will cover basics of using UNIX and Python to do data analayses
+      * This course will cover basics of using UNIX and Python for data analyses
 
       * Focus is on genomics and sequence data but will also apply to any datasets where data can be accessed in text files and in particular column delimited data
 
